--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   font-family: Arial;
-  background-color: tomato;
+  background-color: gray;
   color: white;
+}
+
+.top {
+  margin-top: 10px;
 }
