--- a/styles/main.css
+++ b/styles/main.css
@@ -2,5 +2,8 @@
   margin: 0;
   padding: 0;
   font-family: Arial;
-  background-color: tomato;
+  background-color: gray;
   color: white; }
+
+.top {
+  margin-top: 10px; }
