--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: Arial;
-  background-color: gray;
-  color: white; }
+  font-family: Arial; }
 
 .top {
   margin-top: 10px; }
